--- a/index.html
+++ b/index.html
@@ -7,25 +7,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Anantha Natarajan - Personal website">
     <meta name="keywords" content="Ananth, Anantha, Anantha Natarajan, sananth12, portfolio, site">
-    <meta property="og:image" content="http://ananth.co.in/images/Anantha_Natarajan.png">
+    <meta property="og:image" content="./images/Anantha_Natarajan.png">
 
-    <link rel="stylesheet" href="http://ananth.co.in/css/bootstrap.min.css">
-    <link rel="stylesheet" href="http://ananth.co.in/css/animate.min.css">
-    <link href="http://ananth.co.in/css/font-awesome.min.css" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="http://ananth.co.in/images/favicon.ico">
-    <link rel="stylesheet" href="http://ananth.co.in/css/main.min.css">
-    <link rel="stylesheet" href="http://ananth.co.in/css/home.css">
-    <link rel="stylesheet" href="http://ananth.co.in/css/overrides.css">
-    <link rel="stylesheet" href="http://ananth.co.in/css/nojs.css">
+    <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <link rel="stylesheet" href="./css/animate.min.css">
+    <link href="./css/font-awesome.min.css" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
+    <link rel="stylesheet" href="./css/main.min.css">
+    <link rel="stylesheet" href="./css/home.css">
+    <link rel="stylesheet" href="./css/overrides.css">
+    <link rel="stylesheet" href="./css/nojs.css">
 
-    <script async="" src="http://www.google-analytics.com/analytics.js"></script><script src="http://ananth.co.in/js/jquery.min.js"></script>
-    <script src="http://ananth.co.in/js/viewportchecker.js"></script>
-    <script src="http://ananth.co.in/js/typed.min.js"></script>
-    <script src="http://ananth.co.in/js/pushy.min.js"></script>
-    <script src="http://ananth.co.in/js/modernizr.js"></script>
-    <script src="http://ananth.co.in/js/main.js"></script>
-    <script src="http://ananth.co.in/js/particles.min.js"></script>
-                <script src="http://ananth.co.in/js/particles.js"></script>
+    <script async="" src="http://www.google-analytics.com/analytics.js"></script><script src="./js/jquery.min.js"></script>
+    <script src="./js/viewportchecker.js"></script>
+    <script src="./js/typed.min.js"></script>
+    <script src="./js/pushy.min.js"></script>
+    <script src="./js/modernizr.js"></script>
+    <script src="./js/main.js"></script>
+    <script src="./js/particles.min.js"></script>
+                <script src="./js/particles.js"></script>
 
 <style>
 
@@ -127,7 +127,7 @@ canvas {
 
     <ul>
     <li>
-        <a href="http://ananth.co.in/now"><i class="fa fa-file"></i>Now</a>
+        <a href="https://parthrao.github.io/now"><i class="fa fa-file"></i>Now</a>
       </li>
       <li>
         <a href="http://blog.ananth.co.in"><i class="fa fa-book"></i>Blog</a>
@@ -202,7 +202,7 @@ canvas {
 
           <p class="padded concealed">
           Recently I've started <a href="http://blog.ananth.co.in">writing</a>.
-     These are some things I'm working on <a href="http://ananth.co.in/now">now</a>.
+     These are some things I'm working on <a href="https://parthrao.github.io/now">now</a>.
   </p>
       <p class="concealed"></p>
 
