--- a/now/index.html
+++ b/now/index.html
@@ -12,21 +12,21 @@
     <meta name="keywords" content="Ananth, Anantha, Anantha Natarajan, sananth12, portfolio, site">
     <meta name="author" content="Anantha Natarajan S">
 
-    <link rel="stylesheet" href="http://ananth.co.in/css/bootstrap.min.css">
-    <link rel="stylesheet" href="http://ananth.co.in/css/animate.min.css">
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/animate.min.css">
     <link href="../css/font-awesome.min.css" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="http://ananth.co.in/images/favicon.ico">  
-    <link rel="stylesheet" href="http://ananth.co.in/css/main.min.css">
-    <link rel="stylesheet" href="http://ananth.co.in/css/home.css">
-    <link rel="stylesheet" href="http://ananth.co.in/css/overrides.css">
-    <link rel="stylesheet" href="http://ananth.co.in/css/nojs.css">
+    <link rel="icon" type="image/x-icon" href="../images/favicon.ico">  
+    <link rel="stylesheet" href="../css/main.min.css">
+    <link rel="stylesheet" href="../css/home.css">
+    <link rel="stylesheet" href="../css/overrides.css">
+    <link rel="stylesheet" href="../css/nojs.css">
 
-    <script src="http://ananth.co.in/js/jquery.min.js"></script> 
-    <script src="http://ananth.co.in/js/viewportchecker.js"></script>
-    <script src="http://ananth.co.in/js/typed.min.js"></script>
-    <script src="http://ananth.co.in/js/pushy.min.js"></script>
-    <script src="http://ananth.co.in/js/modernizr.js"></script>
-    <script src="http://ananth.co.in/js/main.js"></script>
+    <script src="../js/jquery.min.js"></script> 
+    <script src="../js/viewportchecker.js"></script>
+    <script src="../js/typed.min.js"></script>
+    <script src="../js/pushy.min.js"></script>
+    <script src="../js/modernizr.js"></script>
+    <script src="../js/main.js"></script>
 
 </head>
     <body class="">
@@ -36,31 +36,31 @@
   <div id="" class="nav pushy pushy-left">
     <ul>
       <li>
-        <a class="introduction" href="http://ananth.co.in">
+        <a class="introduction" href="https://parthrao.github.io">
           <i class="fa fa-angle-up"></i>Introduction
         </a>
       </li>
 
       <li>
-        <a class="about" href="http://ananth.co.in">
+        <a class="about" href="https://parthrao.github.io">
           <i class="fa fa-user"></i>Who I am
         </a>
       </li>
 
       <li>
-        <a class="interests" href="http://ananth.co.in">
+        <a class="interests" href="https://parthrao.github.io">
           <i class="fa fa-code"></i>What I do
         </a>
       </li>
       
       <li>
-        <a class="work" href="http://ananth.co.in">
+        <a class="work" href="https://parthrao.github.io">
           <i class="fa fa-suitcase"></i>What I've done
         </a>
       </li>
 
       <li>
-        <a class="contact" href="http://ananth.co.in">
+        <a class="contact" href="https://parthrao.github.io">
           <i class="fa fa-paper-plane"></i>Contact
         </a>
       </li>
