--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <html lang="en" class="js rgba backgroundsize cssanimations cssgradients csstransforms fontface gr__ananth_co_in" style=""><!--<![endif]--><head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Ananth | sananth12</title>
+    <title>Parth Rao</title>
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Anantha Natarajan - Personal website">
-    <meta name="keywords" content="Ananth, Anantha, Anantha Natarajan, sananth12, portfolio, site">
+    <meta name="description" content="Parth Rao - Personal website">
+    <meta name="keywords" content="Parth, Parth, Parth Rao, parthrao8, portfolio, site">
     <meta property="og:image" content="./images/Anantha_Natarajan.png">
 
     <link rel="stylesheet" href="./css/bootstrap.min.css">
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="./css/overrides.css">
     <link rel="stylesheet" href="./css/nojs.css">
 
-    <script async="" src="http://www.google-analytics.com/analytics.js"></script><script src="./js/jquery.min.js"></script>
+    <!-- <script async="" src="http://www.google-analytics.com/analytics.js"></script><script src="./js/jquery.min.js"></script> -->
     <script src="./js/viewportchecker.js"></script>
     <script src="./js/typed.min.js"></script>
     <script src="./js/pushy.min.js"></script>
@@ -213,7 +213,7 @@ canvas {
        <div class="dash animated fadeIn"></div>
        <h5>Places I've worked/interned at:</h5>
        <p class="concealed">
-           <img class="logos1" src="./images/Nitt.png">
+           <!-- <img class="logos1" src="./images/Nitt.png">
 
            <img class="logos2" src="./images/Microsoft.svg">
 
@@ -221,13 +221,13 @@ canvas {
 
            <img class="logos4" src="./images/Stanford.svg">
 
-           <img class="logos5" src="./images/nyu.png">
+           <img class="logos5" src="./images/nyu.png"> -->
        </p>
 
        <div class="dash animated fadeIn"></div>
        <p class="concealed">
            This summer I'll be interning at<br>
-            <img class="logos6" src="./images/facebook.png">
+            <!-- <img class="logos6" src="./images/facebook.png"> -->
        </p>
 
 
@@ -290,7 +290,7 @@ canvas {
         <div class="dash"></div>
 
         <p>
-          I'm <a href="https://www.16personalities.com/intp-personality">INTP-A</a>.
+          I'm <a href="https://www.16personalities.com/intp-personality">ISTP-A</a>.
           Besides coding, working out, <a href="https://www.goodreads.com/sananth12">reading</a> books and playing DoTA I do my utmost best to change the world.
         </p>
 
@@ -432,7 +432,7 @@ canvas {
     </ul>
 
     <div class="license">
-      2015  Anantha Natarajan S.
+      2017  Parth Rao
         <br>
       Made with HTML,CSS, Bootstrap, Font Awesome and lots of ♥
     </div>
@@ -463,7 +463,7 @@ canvas {
 	      });
 	  });
     </script>
-    <script>
+    <!--<script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -472,7 +472,7 @@ canvas {
       ga('create', 'UA-57727204-1', 'auto');
       ga('send', 'pageview');
 
-      </script>
+      </script> -->
 <script type="text/javascript">
     function playaudio(){
         var snd = new Audio("./name.mp3");
