website text set and links working

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <script src="./js/modernizr.js"></script>
     <script src="./js/main.js"></script>
     <script src="./js/particles.min.js"></script>
-                <script src="./js/particles.js"></script>
+    <script src="./js/particles.js"></script>
 
 <style>
 
@@ -182,7 +182,7 @@ canvas {
       <section id="about">
   <div class="container">
     <div class="col-md-12 center">
-      <img class="profile-pic" src="./images/Anantha_Natarajan.png">
+      <img class="profile-pic-1" src="./images/parth.png">
 
       <h1>Hi there!</h1>
 
@@ -193,17 +193,15 @@ canvas {
       <p class="padded concealed">I'm a Full Stack Developer, currently pursuing my masters in Information Systems at <a href="http://www.nyu.edu/" target="_blank"> New York University</a> specializing in Machine Learning.</p>
 
         <p class="padded concealed">I did my undergrad at the <a href="http://www.daiict.ac.in/" target="_blank"> Dhirubhai Ambani Institute of Information and Communication Technology</a> graduating with a B.Tech degree in Information & &amp; Communication Technology.</p>
+        <p class="padded concealed"> Beside programming I like to play all kind of sports and do Yoga.</p>
 	
-         <p class="padded concealed">I participate in programming contests at <a href="http://www.codechef.com/users/sananth12" target="_blank">Codechef</a> and <a href="http://www.codeforces.com/profile/sananth12" target="_blank">Codeforces</a>
+         <!-- <p class="padded concealed">I participate in programming contests at <a href="http://www.codechef.com/users/sananth12" target="_blank">Codechef</a> and <a href="http://www.codeforces.com/profile/sananth12" target="_blank">Codeforces</a>
            , make small projects and open source contributions at <a href="http://www.github.com/sananth12" target="_blank">Github</a>, and hack on random stuff.
 	   I believe programs can have deep beauty and elegance, just like poems.
 
-            </p>
+            </p> -->
 
-          <p class="padded concealed">
-          Recently I've started <a href="http://blog.ananth.co.in">writing</a>.
-     These are some things I'm working on <a href="https://parthrao.github.io/now">now</a>.
-  </p>
+          
       <p class="concealed"></p>
 
 
@@ -211,8 +209,13 @@ canvas {
       </p-->
       <br><br>
        <div class="dash animated fadeIn"></div>
-       <h5>Places I've worked/interned at:</h5>
-       <p class="concealed">
+       <h5>Places I've worked at:</h5>
+       <p >
+          <img class="logos4" src="./images/nyu-white.png">
+          <img class="logos2" src="https://dndw32r4edmw5.cloudfront.net/lyearn/lyearnWebsite/images/lyearn-gray-logo.png">
+          <img class="logos1" src="./images/playpower.png">
+          <img class="logos3" src="./images/oracle.png">
+
            <!-- <img class="logos1" src="./images/Nitt.png">
 
            <img class="logos2" src="./images/Microsoft.svg">
@@ -225,10 +228,6 @@ canvas {
        </p>
 
        <div class="dash animated fadeIn"></div>
-       <p class="concealed">
-           This summer I'll be interning at<br>
-            <!-- <img class="logos6" src="./images/facebook.png"> -->
-       </p>
 
 
 </div></div></section>
@@ -248,12 +247,15 @@ canvas {
 
         <div class="dash"></div>
                         <p class="light">
-                          </p><p> Programming Languages: C++, C, Java, C#</p>
-                           <p>Scripting Languages: Python, PHP</p>
-                           <p>Web Technologies: Javascript, Dart, Git, SQL, Node, CSS, HTML</p>
+                          </p><p> Programming Languages: Python, Java, C++, C, C#</p>
+                           <p>Scripting Languages: Javascript</p>
+                           <p>Web Technologies: Node, HTML, SQL, CSS</p>
+                           <p>Big-Data Technologies: Hadoop, Spark, Hive, Pig, Hbase
+                           <p>Web Services: Amazon Web services, Heroku, IBM Bluemix, Microsoft Azure
+                           <p>Frameworks: React, Angular, GraphQL, Spring, Django, MVC
                           <div>
                                           <p>
-                I've worked with <font color="red"><span class="element">Dart</span><span class="typed-cursor">|</span></font>
+                I've worked with <font color="red"><span class="element">Python</span><span class="typed-cursor">|</span></font>
             </p>
           </div>
 
@@ -291,14 +293,14 @@ canvas {
 
         <p>
           I'm <a href="https://www.16personalities.com/intp-personality">ISTP-A</a>.
-          Besides coding, working out, <a href="https://www.goodreads.com/sananth12">reading</a> books and playing DoTA I do my utmost best to change the world.
+          Besides coding, working out, <a href="https://www.goodreads.com/sananth12">reading</a> books and playing DoTA I do my utmost best to keep improving in whatever I do.
         </p>
 
         <div class="dash"></div>
       </div>
     </div>
 
-    <div class="row">
+<!--     <div class="row">
       <div class="concealed visible animated fadeInUp">
         <div class="flaticon">
           <i class="flaticon-book82"></i>
@@ -321,7 +323,7 @@ canvas {
 
         <div class="dash"></div>
       </div>
-    </div>
+    </div> -->
 
   </div>
 </section>
@@ -332,48 +334,50 @@ canvas {
     <h1>Projects</h1>
 
     <div class="left col-md-8">
-        <h3>Image Scraper</h3>
+        <h3>ALIVE</h3>
         <div class="padded">
-        	A high performance, easy to use, multithreaded command line tool which downloads images from the given webpage.
+        	Advanced interactive e-learning web platform which can change the way Online education work currently.
         	<br>
-        	<a href="https://github.com/sananth12/ImageScraper">https://github.com/sananth12/ImageScraper</a>
 	      </div>
 	      <br>
-        <h3>Fire Notes</h3>
+        <h3>CROWD POLITICS</h3>
         <div class="padded">
-        	Fire Notes is a notes sharing platform where students can upload, maintain versions and download notes.
+        	A web product to bring more awareness in people about political issues and to help
+          identify fake news.
         	<br>
-        	<a href="http://notes.deltaforce.club">http://notes.deltaforce.club</a>
+        	<a href="https://crowdpolitics.000webhostapp.com/">https://crowdpolitics.000webhostapp.com</a>
         	<br>
-        	<a href="https://github.com/delta/NotesSharing">https://github.com/delta/NotesSharing</a>
         </div>
         <br>
-        <h3>Quoter</h3>
+        <h3>RESTAURANT DATA ANALYTICS</h3>
         <div class="padded">
-        Quoter delivers the Quote of the Day from www.brainyquote.com, and keeps track of unread quotes to display when offline.
+        Used Yelp dataset to explore business trends, customer behavior and satisfaction in
+        Restaurant Industry using machine learning techniques like sentiment analysis and
+        Decision tree classification. Model achieved 78% accuracy.
         <br>
-        <a href="https://github.com/sananth12/Quote-of-the-Day">https://github.com/sananth12/Quote-of-the-Day</a>
+        <a href="https://github.com/parthrao/Restaurant-Data-Analytics">https://github.com/parthrao/Restaurant-Data-Analytics</a>
         </div>
         <br>
-        <h3>Sauron</h3>
+        <h3>ONLINE MULTIPLAYER GAME ANALYTICS</h3>
         <div class="padded">
-        	Sauron reminds the user to take regular breaks at 20 minute intervals for 20 seconds and helps prevent RSI &amp; CVS.
+        	Analyzed the data of battle-field-3 and found out different clusters of users having
+          similar traits and behavior which can later be used for better match-making or targeted
+          advertisements. Techniques: K-mean clustering, linear regression.
         	<br>
-        	<a href="https://github.com/sananth12/sauron">https://github.com/sananth12/sauron</a>
+        	
         </div>
     </div>
 
     <div class="right col-md-4">
       <h2>Skills</h2>
       <div class="bars">
-        <div class="bar concealed visible animated fadeInRight">C/C++</div>
+        <div class="bar concealed visible animated fadeInRight">Javascript , NodeJS</div>
         <div class="bar concealed visible animated fadeInRight">Java</div>
         <div class="bar concealed visible animated fadeInRight">Python</div>
-        <div class="bar concealed visible animated fadeInRight">PHP</div>
-        <div class="bar concealed visible animated fadeInRight">C#</div>
-        <div class="bar concealed visible animated fadeInRight">Javascript , NodeJS</div>
-        <div class="bar concealed visible animated fadeInRight">React + GraphQL</div>
-        <div class="bar concealed visible animated fadeInRight">Data Science (R, Matlab)</div>
+        <div class="bar concealed visible animated fadeInRight">C++, C</div>
+        <div class="bar concealed visible animated fadeInRight"></div>
+        <div class="bar concealed visible animated fadeInRight">React, GraphQL, Angular</div>
+        <div class="bar concealed visible animated fadeInRight">Data Science</div>
         <div class="bar concealed visible animated fadeInRight">SQL</div>
         <div class="bar concealed visible animated fadeInRight">Git</div>
         <div class="bar concealed visible animated fadeInRight">HTML5, CSS3</div>
@@ -403,7 +407,7 @@ canvas {
 
           <h1>Here's my resumé</h1>
           <p>
-          <a class="contact" href="./resume/Anantha_Natarajan_S_Resume.pdf">
+          <a class="contact" href="./resume/Parth_Rao_Resume.pdf">
             Resumé<i class="fa fa-file-pdf-o" aria-hidden="true"></i>
           </a>
       </p>
