jquery big solved

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="./css/nojs.css">
 
     <!-- <script async="" src="http://www.google-analytics.com/analytics.js"></script><script src="./js/jquery.min.js"></script> -->
+    <script src="./js/jquery.min.js"></script>
     <script src="./js/viewportchecker.js"></script>
     <script src="./js/typed.min.js"></script>
     <script src="./js/pushy.min.js"></script>
@@ -255,7 +256,7 @@ canvas {
                            <p>Frameworks: React, Angular, GraphQL, Spring, Django, MVC
                           <div>
                                           <p>
-                I've worked with <font color="red"><span class="element">Python</span><span class="typed-cursor">|</span></font>
+                I've worked with <font color="red"><span class="element"></span><span class="typed-cursor"></span></font>
             </p>
           </div>
 
@@ -447,7 +448,7 @@ canvas {
     <script>
 	  $(function(){
 	      $(".element").typed({
-	        strings: ["C/C++","Javascript","PHP","SQL","Python","AngularJS","NodeJS","ExpressJS","Dart","Java","Jasmine"],
+	        strings: ["C/C++","Javascript","SQL","Python","AngularJS","NodeJS","React","Hadoop","Java","Spark"],
 	        typeSpeed: 0,
     		// time before typing starts
 			startDelay: 2,
