now and blog links removed

--- a/index.html
+++ b/index.html
@@ -127,12 +127,12 @@ canvas {
     <div class="dash"></div>
 
     <ul>
-    <li>
+    <!-- <li>
         <a href="https://parthrao.github.io/now"><i class="fa fa-file"></i>Now</a>
       </li>
       <li>
         <a href="http://blog.ananth.co.in"><i class="fa fa-book"></i>Blog</a>
-      </li>
+      </li> -->
       <li>
         <a href="./resume/Anantha_Natarajan_S_Resume.pdf"><i class="fa fa-file"></i>Resume</a>
       </li>
@@ -190,7 +190,9 @@ canvas {
       <div class="dash animated fadeIn"></div>
 
       <p class="concealed visible animated fadeInUp">
-                    </p><p class="concealed">My name is Parth. <a><i class="fa fa-volume-up" onclick="playaudio()" aria-hidden="true"></i></a> <br>Or more formally Parth Rao H.</p>
+                    </p><p class="concealed">My name is Parth. <a>
+                      
+                    </a> <br>Or more formally Parth Rao H.</p>
       <p class="padded concealed">I'm a Full Stack Developer, currently pursuing my masters in Information Systems at <a href="http://www.nyu.edu/" target="_blank"> New York University</a> specializing in Machine Learning.</p>
 
         <p class="padded concealed">I did my undergrad at the <a href="http://www.daiict.ac.in/" target="_blank"> Dhirubhai Ambani Institute of Information and Communication Technology</a> graduating with a B.Tech degree in Information & &amp; Communication Technology.</p>
@@ -270,14 +272,14 @@ canvas {
           <i class="flaticon-bulb11"></i>
         </div>
 
-        <h3>Open source</h3>
+        <h3>Startups</h3>
 
         <div class="dash"></div>
 
         <p>
-          I <span class="heart"></span> open source and everything about it to its very nature.
-          I have contributed to several open source projects
-          and manage a few of my own.
+          I <span class="heart"></span> Startups and everything about it to its very nature.
+          I have Worked in several startup companies as a lead developer
+          and aspiring to make my own.
         </p>
 
         <div class="dash"></div>
