removed few links

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Parth Rao - Personal website">
     <meta name="keywords" content="Parth, Parth, Parth Rao, parthrao8, portfolio, site">
-    <meta property="og:image" content="./images/Anantha_Natarajan.png">
+    <!-- <meta property="og:image" content="./images/Anantha_Natarajan.png"> -->
 
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/animate.min.css">
@@ -127,14 +127,11 @@ canvas {
     <div class="dash"></div>
 
     <ul>
-    <!-- <li>
-        <a href="https://parthrao.github.io/now"><i class="fa fa-file"></i>Now</a>
-      </li>
-      <li>
-        <a href="http://blog.ananth.co.in"><i class="fa fa-book"></i>Blog</a>
+      <!-- <li>
+        <a href="./projects/index.html"><i class="fa fa-file"></i>Projects</a>
       </li> -->
       <li>
-        <a href="./resume/Anantha_Natarajan_S_Resume.pdf"><i class="fa fa-file"></i>Resume</a>
+        <a href="./resume/Parth_Rao_Resume.pdf"><i class="fa fa-file"></i>Resume</a>
       </li>
     </ul>
   </div>
@@ -197,12 +194,6 @@ canvas {
 
         <p class="padded concealed">I did my undergrad at the <a href="http://www.daiict.ac.in/" target="_blank"> Dhirubhai Ambani Institute of Information and Communication Technology</a> graduating with a B.Tech degree in Information & &amp; Communication Technology.</p>
         <p class="padded concealed"> Beside programming I like to play all kind of sports and do Yoga.</p>
-	
-         <!-- <p class="padded concealed">I participate in programming contests at <a href="http://www.codechef.com/users/sananth12" target="_blank">Codechef</a> and <a href="http://www.codeforces.com/profile/sananth12" target="_blank">Codeforces</a>
-           , make small projects and open source contributions at <a href="http://www.github.com/sananth12" target="_blank">Github</a>, and hack on random stuff.
-	   I believe programs can have deep beauty and elegance, just like poems.
-
-            </p> -->
 
           
       <p class="concealed"></p>
@@ -252,10 +243,11 @@ canvas {
                         <p class="light">
                           </p><p> Programming Languages: Python, Java, C++, C, C#</p>
                            <p>Scripting Languages: Javascript</p>
-                           <p>Web Technologies: Node, HTML, SQL, CSS</p>
+                           <p>Web Technologies: Node, HTML, CSS</p>
                            <p>Big-Data Technologies: Hadoop, Spark, Hive, Pig, Hbase
                            <p>Web Services: Amazon Web services, Heroku, IBM Bluemix, Microsoft Azure
                            <p>Frameworks: React, Angular, GraphQL, Spring, Django, MVC
+                           <p>Databases: Maongodb, Elasticsearch, Oracledb, MySql
                           <div>
                                           <p>
                 I've worked with <font color="red"><span class="element"></span><span class="typed-cursor"></span></font>
@@ -296,37 +288,12 @@ canvas {
 
         <p>
           I'm <a href="https://www.16personalities.com/intp-personality">ISTP-A</a>.
-          Besides coding, working out, <a href="https://www.goodreads.com/sananth12">reading</a> books and playing DoTA I do my utmost best to keep improving in whatever I do.
+          Besides coding, I do Yoga, Play sports and DoTa. I try my best to keep improving in whatever I do.
         </p>
 
         <div class="dash"></div>
       </div>
     </div>
-
-<!--     <div class="row">
-      <div class="concealed visible animated fadeInUp">
-        <div class="flaticon">
-          <i class="flaticon-book82"></i>
-        </div>
-
-        <h3>Writing</h3>
-
-        <div class="dash"></div>
-                        <p class="light">
-                          </p><p>I write about interviews, life and tech stuff at my <a href="http://blog.ananth.co.in">blog</a>. Here some some of my latest posts:</p>
-                          <div>
-             <p>
-               <a href="https://blog.ananth.co.in/2016-year-in-review-and-look-ahead-b2a49a50d4e8#.8nwfio2no">2016: Year in review and look ahead</a>
-               <br>
-               <a href="https://blog.ananth.co.in/the-google-interview-d3badef7b08f#.n0yhrnj1r">The Google interview</a>
-               <br>
-               <a href="https://medium.com/@sananth12/the-twitter-interview-cc408ddf60b5">The Twitter Interview</a>
-            </p>
-          </div>
-
-        <div class="dash"></div>
-      </div>
-    </div> -->
 
   </div>
 </section>
