--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ canvas {
 
     <h1 class="animated fadeInUp">Hello, I'm Parth</h1>
     <!-- <h2 class="animated fadeInUp">I <span class="pulse">♥</span> to play .</h2> -->
-    <h2 class="animated fadeInUp">I know one thing that</h2>
+    <h2 class="animated fadeInUp">I know one thing that </h2>
     <h2 class="animated fadeInUp">“Our lives become beautiful not because we are perfect.</h2>
     <h2 class="animated fadeInUp">Our lives become beautiful because we put our hearts into what we do.”</h2>
     <h2 class="animated fadeInUp"> -Sadhguru</h2>
@@ -428,13 +428,16 @@ canvas {
           <br>
           For Demo visit using firefox or safari:
           <br>
-        	<a href="http://bit.ly/1MSU83F">http://bit.ly/1MSU83F</a>
-          <br>
+        	<a href="http://bit.ly/1MSU83F">http://bit.ly/1MSU83F</a> ,
+          <a href="http://bit.ly/1IlpC3I">http://bit.ly/1IlpC3I</a> ,
+          <a href="http://bit.ly/1Tq8kDA">http://bit.ly/1Tq8kDA</a> ,
+          <a href="http://bit.ly/1QR63mD">http://bit.ly/1QR63mD</a>
+          <!-- <br>
           <a href="http://bit.ly/1IlpC3I">http://bit.ly/1IlpC3I</a>
           <br>
           <a href="http://bit.ly/1Tq8kDA">http://bit.ly/1Tq8kDA</a>
           <br>
-          <a href="http://bit.ly/1QR63mD">http://bit.ly/1QR63mD</a>
+          <a href="http://bit.ly/1QR63mD">http://bit.ly/1QR63mD</a> -->
           <br>
           
           <h4>Gift Delivery To Learn Counting</h4>
