link order changed

--- a/index.html
+++ b/index.html
@@ -330,6 +330,15 @@ canvas {
         	<br>
 	      </div>
 	      <br>
+        <h3>CROWD POLITICS</h3>
+        <div class="padded">
+        	A web product to bring more awareness in people about political issues and to help
+          identify fake news.
+        	<br>
+        	<a href="https://crowdpolitics.000webhostapp.com/">visit: Crowd-Politics</a>
+        	<br>
+        </div>
+        <br>
         <h3>RESTAURANT DATA ANALYTICS</h3>
         <div class="padded">
         Used Yelp dataset to explore business trends, customer behavior and satisfaction in
@@ -373,15 +382,7 @@ canvas {
         </div>
 
         <br>
-        <h3>CROWD POLITICS</h3>
-        <div class="padded">
-        	A web product to bring more awareness in people about political issues and to help
-          identify fake news.
-        	<br>
-        	<!-- <a href="https://crowdpolitics.000webhostapp.com/">visit: Crowd-Politics</a> -->
-        	<br>
-        </div>
-        <br>
+        
         <h3>GAMES AT PLAYPOWER LABS</h3>
         <div class="padded">
           <h4>Math Planet App</h4>
