change in description

--- a/index.html
+++ b/index.html
@@ -245,13 +245,12 @@ canvas {
 
         <div class="dash"></div>
                         <p class="light">
-                          </p><p> Programming Languages: Python, Java, C++, C, C#</p>
-                           <p>Scripting Languages: Javascript</p>
+                        </p><p> Programming Languages: Javascript, Python, Java, C++, C#</p>
                            <p>Web Technologies: Node, HTML, CSS</p>
                            <p>Big-Data Technologies: Hadoop, Spark, Hive, Pig, Hbase
                            <p>Web Services: Amazon Web services, Heroku, IBM Bluemix, Microsoft Azure
-                           <p>Frameworks: React, Angular, GraphQL, Spring, Django, MVC
-                           <p>Databases: Maongodb, Elasticsearch, Oracledb, MySql
+                           <p>Frameworks: React, Angular, GraphQL, Spring, Django, MVC, Redux, Relay, Express
+                           <p>Databases: Maongodb, MySql, Elasticsearch, PostgreSQL 
                           <div>
                                           <p>
                 I've worked with <font color="red"><span class="element"></span><span class="typed-cursor"></span></font>
@@ -292,7 +291,7 @@ canvas {
 
         <p>
           I'm <a href="https://www.16personalities.com/intp-personality">ISTP-A</a>.
-          Besides coding, I do Yoga, Play sports and DoTa. I try my best to keep improving in whatever I do.
+          Besides coding, I do Yoga, Play sports and DoTa.
         </p>
 
         <div class="dash"></div>
@@ -313,8 +312,7 @@ canvas {
         	Advanced interactive e-learning web platform which can change the way Online education work currently.
           This will allow instructors to create mastery-learning based adaptive courses to teach any subject in a profound manner.
           I am the tech lead  and project-manager for this project and successfully developed backend and front-end
-          using Node, React, Relay, AWS, Maongodb, Algolia-Search.
-          Product is going to be launched in mid February.
+          using Node, Java, React, Relay, AWS, Maongodb, Algolia-Search.
         	<br>
 	      </div>
 	      <br>
@@ -323,8 +321,8 @@ canvas {
           Lyearn is a learning management system for corporates where companies can create
           courses to train their employees and track their progress.
         	I Designed and developed REST APIs for a learning management system
-          (LMS) using NodeJS, Elasticsearch, AWS.Also I along with 1 more colleague built company’s website using ReactJS .
-          Apart from this I was responsible for EC2 setup, automatic deployment, maintenance, code review etc.
+          (LMS) using NodeJS, Python, Elasticsearch, AWS.Also I along with 2 more colleagues built company’s website using ReactJS .
+          Apart from this I was responsible for EC2 setup, automatic deployment, maintenance, code review, test driven developement etc.
           <br>
         	<a href="https://www.lyearn.com/">Visit: Lyearn</a>
         	<br>
@@ -382,7 +380,7 @@ canvas {
         </div>
 
         <br>
-        
+
         <h3>GAMES AT PLAYPOWER LABS</h3>
         <div class="padded">
           <h4>Math Planet App</h4>
