first sentence changed

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ canvas {
 
     <h1 class="animated fadeInUp">Hello, I'm Parth</h1>
     <!-- <h2 class="animated fadeInUp">I <span class="pulse">♥</span> to play .</h2> -->
-    <h2 class="animated fadeInUp">I know one thing that </h2>
+    <!-- <h2 class="animated fadeInUp">I know one thing that </h2> -->
     <h2 class="animated fadeInUp">“Our lives become beautiful not because we are perfect.</h2>
     <h2 class="animated fadeInUp">Our lives become beautiful because we put our hearts into what we do.”</h2>
     <h2 class="animated fadeInUp"> -Sadhguru</h2>
@@ -250,7 +250,7 @@ canvas {
                            <p>Big-Data Technologies: Hadoop, Spark, Hive, Pig, Hbase
                            <p>Web Services: Amazon Web services, Heroku, IBM Bluemix, Microsoft Azure
                            <p>Frameworks: React, Angular, GraphQL, Spring, Django, MVC, Redux, Relay, Express
-                           <p>Databases: Maongodb, MySql, Elasticsearch, PostgreSQL 
+                           <p>Databases: Maongodb, MySql, Elasticsearch, PostgreSQL
                           <div>
                                           <p>
                 I've worked with <font color="red"><span class="element"></span><span class="typed-cursor"></span></font>
