--- a/index.html
+++ b/index.html
@@ -342,8 +342,8 @@ canvas {
         Used Yelp dataset to explore business trends, customer behavior and satisfaction in
         Restaurant Industry using machine learning techniques like sentiment analysis and
         Decision tree classification. Model achieved 78% accuracy.
-        <!-- <br>
-        <a href="https://github.com/parthrao/Restaurant-Data-Analytics">https://github.com/parthrao/Restaurant-Data-Analytics</a> -->
+        <br>
+        <a href="https://github.com/parthrao/Restaurant-Data-Analytics">Visit: Code</a>
         </div>
         <br>
         <h3>ONLINE MULTIPLAYER GAME ANALYTICS</h3>
@@ -369,6 +369,8 @@ canvas {
         	Used bag of words model and min-hashing technique to convert articles into vectors and used
           K-mean clustering to cluster them into 4 different groups of similar items.
         	<br>
+          <a href="https://github.com/parthrao/PySpark-Projects-MachineLearning/tree/master/kmeans">Visit: git sample</a>
+          
         </div>
 
         <br>
@@ -377,8 +379,24 @@ canvas {
         	Used NYC MTA buses' travel data to plot time series of their average speed (during every 10 minutes) over 3 months period
           Used Box-Jenkins methodology to find the best ARIMA model for the time series in this dataset for.
         	<br>
+          <a href="https://github.com/parthrao/ARIMA-Time-Series-Analysis">Visit: git sample</a>
         </div>
+        <br>
 
+        <h3>Page Rank</h3>
+        <div class="padded">
+          Page Rank algorithm using PySpark and amazon EMR
+          <br>
+          <a href="https://github.com/parthrao/PySpark-Projects-MachineLearning/tree/master/pagerank">Visit: git sample</a>
+        </div>
+        <br>
+
+        <h3>Friend Recommendation</h3>
+        <div class="padded">
+          Friend recommendation system using PySpark and amazon EMR.
+          <br>
+          <a href="https://github.com/parthrao/PySpark-Projects-MachineLearning/tree/master/friend_recommendation">Visit: git sample</a>
+        </div>
         <br>
 
         <h3>GAMES AT PLAYPOWER LABS</h3>
